# MoniTAal

./: .gitignore  CMakeLists.txt  Fixpoint.cpp  Parser.cpp  Parser.h  README.md  TA.cpp  TA.h  a-b.xml  conveyor_assumption.xml  main.cpp  model.xml  response_assumption.xml  state_t.cpp  state_t.h  tree.xml  types.h
benchmark/: CMakeLists.txt  b_live_a_freq.h  engine-classic-uppaal5.xml  gear-control-input.txt  gear-control-input2.txt  gear-control-input3.txt  gear-control-properties.xml  gear_controller_model.h  gear_controller_newgear_prop.h  gear_controller_test.h  main.cpp  uctr-to-monpoly.py
include/: errors.h
models/: startend_formula.xml
src/fixpoint/: CMakeLists.txt  Fixpoint.cpp  Fixpoint.h  Parser.cpp  Parser.h  TA.cpp  TA.h  state_t.cpp  types.h
src/fixpoint-bin/: CMakeLists.txt  main.cpp
src/monitaal/: CMakeLists.txt  EventParser.cpp  EventParser.h  Fixpoint.cpp  Fixpoint.h  Monitor.cpp  Monitor.h  Parser.cpp  Parser.h  TA.cpp  TA.h  delay_state_t.cpp  delay_state_t.h  state.cpp  state.h  symbolic_state_base.cpp  symbolic_state_base.h  types.h
src/monitaal-bin/: CMakeLists.txt  main.cpp
src/timon/: CMakeLists.txt  Fixpoint.cpp  Fixpoint.h  Monitor.cpp  Monitor.h  Parser.cpp  Parser.h  TA.cpp  TA.h  state.cpp  state.h  state_t.cpp  state_t.h  types.h
src/timon-bin/: CMakeLists.txt  main.cpp
test/: Assumption_test.cpp  CMakeLists.txt  DelayTest.cpp  EventParserTest.cpp  Monitor_test.cpp  Presentation_examples.cpp
test/models/: CMakeLists.txt  a-b copy.xml  a-b30.xml  absentAQ.xml  absentAQinput.txt  absentBQR.xml  absentBQRinput.txt  absentBR.xml  absentBRinput.txt  b_or_c.xml  c_after_10.xml  c_after_20.xml  delay-example.xml  f(g(notb)_and_g(f(a)).xml  knowledge_test.xml  model.xml  never_b.xml  only_ab_until10.xml  recurBQR.xml  recurBQRinput.txt  recurGLB.xml  recurGLBinput.txt  small1.xml  small2.xml  small_intersect.xml  startend_div_formula.xml  time-must-pass.xml  time_converge.xml
